--- a/external/StratoHAL/i18n/message.txt
+++ b/external/StratoHAL/i18n/message.txt
@@ -1,14 +1,29 @@
-ID:Cannot open file "%s".\n
-ja:ファイル "%s" を開けません。\n
-ca:No es pot obrir el fitxer "%s".\n
-es:No se puede abrir el archivo "%s".\n
-de:Datei "%s" kann nicht geöffnet werden.\n
-it:Impossibile aprire il file "%s".\n
+ID:Out of memory.
+ja:メモリが足りません。
 ---
-ID:Cannot read file "%s".\n
-ja:ファイル "%s" を読み込めません。\n
-ca:No es pot llegir el fitxer "%s".\n
-es:No se puede leer el archivo "%s".\n
-de:Datei "%s" kann nicht gelesen werden.\n
-it:Impossibile leggere il file "%s".\n
+ID:Cannot open file "%s".
+ja:ファイル "%s" を開けません。
+ca:No es pot obrir el fitxer "%s".
+es:No se puede abrir el archivo "%s".
+de:Datei "%s" kann nicht geöffnet werden.
+it:Impossibile aprire il file "%s".
+---
+ID:Cannot read file "%s".
+ja:ファイル "%s" を読み込めません。
+ca:No es pot llegir el fitxer "%s".
+es:No se puede leer el archivo "%s".
+de:Datei "%s" kann nicht gelesen werden.
+it:Impossibile leggere il file "%s".
+---
+ID:No startup file.
+ja:スタートアップファイルがありません。
+---
+ID:The app is crashed.
+ja:アプリケーションがクラッシュしました。
+---
+ID:Failed to initialize sound.
+ja:サウンドの初期化に失敗しました。
+---
+ID:Failed to initialize the graphics.
+ja:グラフィックスの初期化に失敗しました。
 ---
