--- a/resources/manpage/playfield-compiler.1
+++ b/resources/manpage/playfield-compiler.1
@@ -1,5 +1,5 @@
-.\" playfield-compiler.1 - Playfield Engine compiler manpage
-.TH PLAYFIELD-COMPILER 1 "September 2025" "Playfield Engine 1.0" "User Commands"
+.\" playfield-compiler.1 - Playfield compiler manpage
+.TH PLAYFIELD-COMPILER 1 "September 2025" "Playfield 1.0" "User Commands"
 .SH NAME
 playfield-compiler \- compile Playfield scripts into bytecode
 .SH SYNOPSIS
