--- a/resources/manpage/playfield-pack.1
+++ b/resources/manpage/playfield-pack.1
@@ -1,7 +1,7 @@
-.\" playfield-pack.1 - Playfield Engine packager manpage
-.TH PLAYFIELD-PACK 1 "September 2025" "Playfield Engine 1.0" "User Commands"
+.\" playfield-pack.1 - Playfield packager manpage
+.TH PLAYFIELD-PACK 1 "September 2025" "Playfield 1.0" "User Commands"
 .SH NAME
-playfield-pack \- package assets into a single archive for Playfield Engine
+playfield-pack \- package assets into a single archive for Playfield
 .SH SYNOPSIS
 .B playfield-pack
 [\fIfiles...\fR]
