--- a/resources/manpage/playfield.1
+++ b/resources/manpage/playfield.1
@@ -1,5 +1,5 @@
-.\" playfield.1 - Playfield Engine manpage
-.TH PLAYFIELD 1 "September 2025" "Playfield Engine 1.0" "User Commands"
+.\" playfield.1 - Playfield manpage
+.TH PLAYFIELD 1 "September 2025" "Playfield 1.0" "User Commands"
 .SH NAME
 playfield \- lightweight 2D game engine and script runtime
 .SH SYNOPSIS
@@ -7,7 +7,7 @@ playfield \- lightweight 2D game engine and script runtime
 
 .SH DESCRIPTION
 The
-.B Playfield Engine
+.B Playfield
 is a lightweight, cross-platform 2D game engine and scripting runtime
 based on the NoctLang virtual machine. It provides fast JIT compilation
 on desktop platforms and a high-performance interpreter on others.
