--- a/resources/manpage/playfield-pack.1
+++ b/resources/manpage/playfield-pack.1
@@ -10,7 +10,7 @@ playfield-pack \- package assets into a single archive for Playfield
 The
 .B playfield-pack
 tool creates a package archive
-.I assets.pak
+.I assets.arc
 from the given list of files and directories.
 The resulting archive can be executed by the
 .B playfield
@@ -18,7 +18,7 @@ runtime.
 
 All specified files and directories are recursively included.
 The output file is always written as
-.I assets.pak
+.I assets.arc
 in the current working directory.
 
 .SH EXAMPLES
